# testgen.js

./: .eslintrc.json  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
lib/: analyzer.js  models.js  parser.js  sexp.js  solver.js  utils.js
models/: abc148_a.js  abc148_a.smt2  run.js
models/abc148_a/: solver1.js  solver2.js  spec.smt2
native/: Cargo.toml
native/src/: lib.rs
test/: abs.js  integral-addition-soundness.smt2
