[package]
name = "testgen-js"
version = "0.1.0"
authors = ["Koki Takahashi <hakatasiloving@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "testgen_js"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
mozjs = "0.10.1"
